--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
+    "swiper": "^12.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
