--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 /frontend/npm-debug.log*
 /frontend/yarn-debug.log*
 /frontend/yarn-error.log*
+/frontend/package-lock.json
+/frontend/package.json
 
 # =========================
 # Logs
